tests/NormalTests/paczka1/fuzzy1/44323836.err
Error in line 1: J87BM0Khvwy S581 57,1
Error in line 6: BGXIHa8ta0q S614 7,8
Error in line 20: x4XAlhI S614 20,4
Error in line 28: HGw A582 97,5
